--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gisement</title>
+    <meta name="description" content="Gisement est une application de gestion de patrimoine immobilier">
     <link rel="preconnect" href="https://fonts.bunny.net">
     <link href="https://fonts.bunny.net/css?family=poppins:300,400,500,600,700&display=swap" rel="stylesheet" />
   </head>
